fix: product pagination test and sorting